=== 1.99.9 ===

2008-01-30  Hubert Figuiere  <hub@figuiere.net>

	* exempi/xmp.h (XMP_OPEN_OPNLYXMP): Bad API breakage fix (introduced
	in 1.99.8)

=== 1.99.8 ===

2008-01-23  Hubert Figuiere  <hub@figuiere.net>

	* source/XMPFiles/FormatSupport/GIF_Support.cpp (ReadHeader): Fix
	a nasty buffer overflow. Closes Debian #454297. Closes Gnome #484105
	Patch by Michael Biebl <biebl@debian.org>
	(ReadBlock): Fix another possible overflow similar to the one in
	ReadHeader()

2008-01-22  Hubert Figuiere  <hub@figuiere.net>

	* exempi/xmp.h: Fix a typo. (Closes #14200)

2008-01-18  Hubert Figuiere  <hub@figuiere.net>

	* source/XMPFiles/Makefile.am: Disable strict aliasing. This fix
	some nasty warning.

2008-01-13  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac: Allow disabling unittest if you
	don't have boost (Closes #13712)

	* autogen.sh: Don't run autoheader. (Closes #14049)

	* autogen.sh: re-order commands in autogens.sh

=== 1.99.7 ===
	
2008-01-12  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac: Fix the soversion. A mix-up occured in the last
	release.

=== 1.99.6 ===

2008-01-11  Hubert Figuiere  <hub@figuiere.net>

	* exempi/tests/test2.cpp (test_tiff_leak): Ensure that the file is
	writable.

2007-12-22  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac: make boost optional as it is only for 	
	the unit tests. (Closes #13712)

	* configure.ac, m4/boost.m4, exempi/test/Makefile.am: 
	Change the BOOST detection macros.
	(Closes #13713)

2007-12-20  Hubert Figuiere  <hub@figuiere.net>

	* source/XMPCore/XMPUtils.cpp (ConvertFromInt64): Fix format
	for long long int that was causing a failure on ppc (big endian).

2007-12-19  Hubert Figuiere  <hub@figuiere.net>

	* exempi/exempi.cpp, exempi/tests/test1.cpp, 
	exempi/tests/test1.xmp, exempi/xmp.h: 
	Add setter/getter for int32, int64, bool, float.

	* exempi/xmpconsts.h, exempi/exempi.cpp: add ACR schema namespace
	
	* public/include/TXMPMeta.hpp, public/include/client-glue/TXMPMeta.incl_cpp,