@@ -10,3 +10,4 @@ Contributions by:
 Ian Jacobi
 Jason Kivlighn
 Michael Biebl <biebl@debian.org>
+Tim Mooney
