@@ -38,14 +38,23 @@
 		#endif
 	#endif
 #elif XMP_UNIXBuild
-#include <endian.h>
-	#if BYTE_ORDER == BIG_ENDIAN
+# if __sun
+#  include <sys/isa_defs.h>
+#  ifdef _LITTLE_ENDIAN
+#    define kBigEndianHost 0
+#  else
+#    define kBigEndianHost 1
+#  endif
+# else
+#  include <endian.h>
+  	#if BYTE_ORDER == BIG_ENDIAN
 		#define kBigEndianHost 1
 	#elif BYTE_ORDER == LITTLE_ENDIAN
 		#define kBigEndianHost 0
 	#else
-		#error "Neither __BIG_ENDIAN__ nor __LITTLE_ENDIAN__ is set"
+		#error "Neither BIG_ENDIAN nor LITTLE_ENDIAN is set"
 	#endif
+# endif
 #else
 	#error "Unknown build environment"
 #endif
