@@ -1,3 +1,8 @@
+2008-02-22  Hubert Figuiere  <hub@figuiere.net>
+
+	* source/XMPFiles/FormatSupport/EndianUtils.hpp: endian
+	detection on Solaris. (Closes #14614)
+
 === 1.99.9 ===
 
 2008-01-30  Hubert Figuiere  <hub@figuiere.net>
